# bigarray-compat

./: bigarray-compat.opam
src/: dune
